[package]
name = "tracing-honeycomb"
version = "0.2.0"
authors = ["Inanna Malick <inanna@recursion.wtf>"]
edition = "2018"
description = "Honeycomb.io tracing layer for multiprocess telemetry"
documentation = "https://inanna-malick.github.io/tracing-honeycomb/tracing_honeycomb/"
repository = "https://github.com/inanna-malick/tracing-honeycomb"
keywords = ["tracing", "honeycomb", "instrumentation"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-distributed =  { path = "../tracing-distributed" , version = "0.2.0"}
libhoney-rust = { git = "https://github.com/Fishrock123/libhoney-rust.git", branch = "runtime-async-std-override", default-features = false, features = ["runtime-async-std"] }
rand = "0.7"
chrono = "0.4.9"
log = "0.4.11"

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tracing-subscriber = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"
proptest = "0.9.5"
